<resources>
    <string name="app_name">GPLX</string>

    <!--Item in Main-->
    <string name="itemTSH">THI SÁT HẠCH</string>
    <string name="itemHLT">HỌC LÝ THUYẾT</string>
    <string name="itemBB">BIỂN BÁO ĐƯỜNG BỘ</string>
    <string name="itemMT">MẸO THI KẾT QUẢ CAO</string>
    <string name="itemTCL">TRA CỨU LUẬT NHANH</string>
    <string name="itemCCS">CÁC CÂU SAI</string>
    <string name="title_activity_left_menu">LeftMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
